Closed Bug 842432 Opened 11 years ago Closed 11 years ago

BaselineCompiler: [jsdbg2] Assertion failure: it.isBaselineJS(), at ion/IonFrames.cpp:895

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86_64
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: jandem)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update])

Attachments

(1 file)

The following testcase asserts on baseline compiler branch revision 1c8552cc6ec4 (run with ):


var g = newGlobal('new-compartment');
var dbg = new Debugger(g);
g.eval('function f(n) { if (n > 0) f(n-1); else debugger; }');
dbg.onEnterFrame = function handleEnter(frame) {
    frame.onPop = function handlePop(c) {
        assertEq(typeof c == "object" && actual.getOwnPropertyNames, true);
    };
};
g.f(10);
Attached patch PatchSplinter Review
In some corner cases, the debugger can call GetPcScript with an Unwound_BaselineStub instead of BaselineStub frame on the stack. This patch fixes GetPcScript to handle the former too.
Assignee: general → jdemooij
Status: NEW → ASSIGNED
Attachment #716452 - Flags: review?(kvijayan)
Attachment #716452 - Flags: review?(kvijayan) → review+
https://hg.mozilla.org/projects/ionmonkey/rev/1bd4ca81f158
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: