Bug 842432 - Fix GetPcScript to check for Unwound_BaselineStub frames. r=djvj